# ocean-dev

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  logo_b64.txt  main.py
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 738f60e0eb4f_inicial.py
backend/app/: main.py
backend/app/config/: database.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/models/: __init__.py  comprador.py  conductor.py  destino.py  entidad.py  factura.py  historial.py  modelo_auth.py  origen.py  patio.py  proceso_producto.py  producto.py  registro.py  rol.py  tipo_entidad.py  tipo_producto.py  tipo_registro.py  trailer.py  transportadora.py  unidad_medida.py  usuario.py  vehiculo.py
backend/app/routers/: autenticacion.py  bascula.py  comprador.py  conductor.py  destino.py  entidad.py  factura.py  historial.py  medida.py  origen.py  patio.py  proceso.py  producto.py  registro.py  trailer.py  transportadora.py  usuario.py  vehiculo.py
backend/app/schemas/: comprador.py  conductor.py  destino.py  entidad.py  factura.py  historial.py  origen.py  patio.py  proceso_producto.py  producto.py  registro.py  rol.py  tipo_entidad.py  tipo_producto.py  tipo_registro.py  trailer.py  transportadora.py  unidad_medida.py  usuario.py  vehiculo.py
backend/app/services/: comprador.py  conductor.py  destino.py  entidad.py  factura.py  historial.py  medida.py  origen.py  patio.py  proceso.py  producto.py  registro.py  servicio_comprador.py  servicio_destino.py  servicio_entidad.py  servicio_factura.py  servicio_historial.py  servicio_medida.py  servicio_origen.py  servicio_patio.py  servicio_proceso.py  servicio_registro.py  servicio_usuario.py  servicio_vehiculo.py  trailer.py  transportadora.py  usuario.py  vehiculo.py
backend/app/templates/: registro_servicios.html
backend/src/: main.py
backend/src/core/: db.py  (+1 more)
(+179 files in other folders)
