[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "apscheduler==3.11.0",
    "asyncpg==0.30.0",
    "bcrypt==4.2.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "click==8.1.7",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "et-xmlfile==1.1.0",
    "fastapi==0.115.6",
    "greenlet==3.0.3",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.4",
    "markupsafe==2.1.5",
    "numpy==2.0.1",
    "openpyxl==3.1.5",
    "packaging==24.1",
    "pandas==2.2.2",
    "passlib==1.7.4",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.20",
    "pytz==2024.1",
    "rsa==4.9",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.32",
    "sqlmodel==0.0.24",
    "starlette==0.41.3",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "uvicorn==0.34.0",
    "watchfiles==1.0.4",
    "websockets==14.2",
]
