[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar[standard]>=2.24.0",
    "sqlalchemy==2.0.32",
    "alembic>=1.18.4",
    "psycopg2-binary==2.9.10",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "apscheduler==3.11.0",
    "pandas==2.2.2",
    "openpyxl==3.1.5",
    "numpy==2.0.1",
    "python-dotenv==1.0.1",
    "uvicorn==0.34.0",
    "watchfiles==1.0.4",
]
